---------------------------------------------------------------------------------------------------
Version: 0.4.8
Date: ????
  Changes:
    - Allow post-processing of get_from_entity via modify_from_entity
---------------------------------------------------------------------------------------------------
Version: 0.4.7
Date: 2025-12-09
  Changes:
    - Allow ignoring entities in get_from_entity
---------------------------------------------------------------------------------------------------
Version: 0.4.6
Date: 2025-11-04
  Bugfixes:
    - Fixed crash with solar panels on certain script-generated surfaces
---------------------------------------------------------------------------------------------------
Version: 0.4.5
Date: 2025-10-23
  Bugfixes:
    - Fixed incorrect resource detection for mining drill ghosts
---------------------------------------------------------------------------------------------------
Version: 0.4.4
Date: 2025-10-04
  Changes:
    - Use LuaItemPrototype::get_module_effects
    - Support generator with burns_fluid=true
    - Support fusion-generator with burns_fluid and effectivity
    - Support mining_drill with resource_searching_offset
    - Support maximum_quality_jump utility constant
---------------------------------------------------------------------------------------------------
Version: 0.4.3
Date: 2025-09-06
  Changes:
    - GUI qualifier now is a table, should make it easier to write custom UI
---------------------------------------------------------------------------------------------------
Version: 0.4.2
Date: 2025-08-25
  Bugfixes:
    - Fixed crash in SE 0.7 when encountering long naquium heat pipe
---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 2025-08-06
  Changes:
    - Made necessary adjustments to boiler fluid mechanics that changed in 2.0.63
---------------------------------------------------------------------------------------------------