@@ -6,6 +6,11 @@ do
     ---@field temperature number
 end
 
+do
+    ---@class (exact) Rates.Configuration.Annotations.BoilerInputFluidTemperatureUnknown : Rates.Configuration.Annotation.Base
+    ---@field type "boiler/input-fluid-temperature-unknown"
+end
+
 local configuration = require("scripts.configuration-util")
 local node = require("scripts.node")
 local progression = require("scripts.progression")
@@ -81,6 +86,17 @@ logic.get_production = function(conf, result, options)
     }
 end
 
+logic.gui_annotation = function(annotation, conf)
+    if (annotation.type == "boiler/input-fluid-temperature-unknown") then
+        local fluids = get_fluids(conf.entity)
+        ---@type Rates.Gui.AnnotationDescription
+        return {
+            text = { "sw-rates-annotation.boiler-input-fluid-temperature-unknown", "[fluid=" .. fluids.input.name .. "]", { "", conf.temperature, " ", { "si-unit-degree-celsius" } } },
+            severity = "information"
+        }
+    end
+end
+
 logic.fill_generated_temperatures = function(result)
     for _, entity in pairs(entities) do
         if (is_supported(entity)) then
@@ -142,8 +158,11 @@ logic.get_from_entity = function(entity, options)
     local fluid = get_fluids(options.entity)
     local temperature = fluid.input.default_temperature
     local fluidbox = entity.fluidbox[1]
+    local annotations = nil ---@type Rates.Configuration.Annotation[]?
     if (fluidbox) then
         temperature = fluidbox.temperature --[[@as number]]
+    else
+        annotations = { { type = "boiler/input-fluid-temperature-unknown" } }
     end
 
     ---@type Rates.Configuration.Boiler
@@ -151,7 +170,8 @@ logic.get_from_entity = function(entity, options)
         type = nil, ---@diagnostic disable-line: assign-type-mismatch
         entity = options.entity,
         quality = options.quality,
-        temperature = temperature
+        temperature = temperature,
+        annotations = annotations
     }
 end
 
