@@ -17,4 +17,8 @@ thrust=Thrust
 stack=stack
 rocket-lift-weight=Rocket capacity
 
+[sw-rates-annotation]
+boiler-input-fluid-temperature-unknown=Default to __1__ (__2__)
+generator-input-fluid-temperature-unknown=Default to __1__ (__2__)
+
 [sw-rates-configuration]
