@@ -3,6 +3,7 @@ Version: 0.4.8
 Date: ????
   Changes:
     - Allow post-processing of get_from_entity via modify_from_entity
+    - Added annotations
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.7
 Date: 2025-12-09
